--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <script type="module" src="./index.js"></script>
 </head>
 <body>
-
+  <div class="bloqueGeneral">
+    <div class="box">olee</div>
+  </div>
+  
 </body>
 </html>
