--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,13 @@
   <link rel="stylesheet" href="./index.css">
   <script type="module" src="./index.js"></script>
 </head>
+
 <body>
   <div class="bloqueGeneral">
     <div class="box">olee</div>
+    <h1 class="mensaje"></h1>
   </div>
-  
+
 </body>
+
 </html>
